--- a/app/views/user/login.ejs
+++ b/app/views/user/login.ejs
@@ -30,7 +30,7 @@
                     <button type="submit" class="btn btn-primary btn-block">Login</button>
                 </form>
 
-                <p class="text-center mt-3">Dont have an account? <a href="/user/register">Register</a></p>
+                <p class="text-center mt-3">Dont have an account? <a href="/user/">Register</a></p>
             </div>
         </div>
     </div>
